--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   provider: ^6.0.5
   flutter_dotenv: ^5.0.1
+  flutter_riverpod: ^2.3.4
 
 
 dev_dependencies:
